plugins {
    id 'java'
    id 'maven-publish'
}

version = "1.0.0-SNAPSHOT"
group = "ca.spottedleaf.dataconverter"

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.13'

    implementation 'it.unimi.dsi:fastutil:8.5.13'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.github.hollow-cube:datafixerupper:cf58e926a6'

    implementation("net.kyori:adventure-api:4.16.0")
    implementation("net.kyori:adventure-key:4.16.0")
    implementation("net.kyori:adventure-text-serializer-gson:4.16.0")
    implementation("net.kyori:adventure-nbt:4.16.0")
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

java {
    withSourcesJar()

    toolchain.languageVersion = JavaLanguageVersion.of(21)
}
